--- a/flex/flex.css
+++ b/flex/flex.css
@@ -1,9 +1,10 @@
 body{
     background-color: #424EE5;
+    font-family: "Open Sans", sans-serif;
 }
 
 .logo{
-    border: 2px crimson;
+    border: 2px solid crimson;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -14,7 +15,7 @@ body{
 .pictorial{
     background-color: #424EE5;
     color: #ffffff;
-    border: 2px crimson;
+    border: 2px solid crimson;
     font-size: 24px;
     padding: 8px;
     margin-right: 14px;
@@ -24,7 +25,7 @@ body{
     background-color: #424EE5;
     color: #ffffff;
     font-size: 24px;
-    border: 2px crimson;
+    border: 2px solid crimson;
     padding: 8px;
 }
 
@@ -42,7 +43,7 @@ body{
 .menu-item{
     background-color: #424EE5;
     color: #ffffff;
-    border: 2px crimson;
+    border: 2px solid crimson;
     font-size: 20px;
     padding: 2px;
     margin-right: 50px;
@@ -51,7 +52,7 @@ body{
 .login{
     background-color: #ffffff;
     color: #000000;
-    border: 2px crimson;
+    border: 2px solid crimson;
     font-size: 16px;
     margin-top: 28px;
     padding-top: 18px;
